--- a/Learning-iOS/ui-trace/UITraceViewController.storyboard
+++ b/Learning-iOS/ui-trace/UITraceViewController.storyboard
@@ -22,11 +22,21 @@
                                     <action selector="didTapTwitter:" destination="IRc-Wt-Pdl" eventType="touchDown" id="N3m-If-9MP"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="372-iB-DyZ">
+                                <rect key="frame" x="8" y="90" width="69" height="30"/>
+                                <state key="normal" title="App Store"/>
+                                <connections>
+                                    <action selector="didTapAppStore:" destination="IRc-Wt-Pdl" eventType="touchUpInside" id="jjh-ki-gns"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
+                            <constraint firstItem="372-iB-DyZ" firstAttribute="top" secondItem="nOE-rP-iLi" secondAttribute="bottom" constant="8" id="TIg-xI-sXg"/>
                             <constraint firstItem="nOE-rP-iLi" firstAttribute="leading" secondItem="L4V-VJ-XR0" secondAttribute="leading" constant="8" id="TXf-T1-kwC"/>
                             <constraint firstItem="nOE-rP-iLi" firstAttribute="top" secondItem="L4V-VJ-XR0" secondAttribute="top" constant="8" id="Z6E-M9-q1C"/>
+                            <constraint firstItem="372-iB-DyZ" firstAttribute="leading" secondItem="L4V-VJ-XR0" secondAttribute="leading" constant="8" id="gXu-6Y-sB6"/>
+                            <constraint firstItem="372-iB-DyZ" firstAttribute="leading" secondItem="nOE-rP-iLi" secondAttribute="leading" id="uOM-er-kMw"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="L4V-VJ-XR0"/>
                     </view>
@@ -34,7 +44,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="868-6P-cWU" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-926" y="107"/>
+            <point key="canvasLocation" x="-926.08695652173924" y="106.47321428571428"/>
         </scene>
         <!--Twitter View Controller-->
         <scene sceneID="KTr-6C-gLD">
@@ -244,6 +254,43 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="99S-Ci-QAl" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="108.69565217391305" y="105.80357142857143"/>
+        </scene>
+        <!--App Store View Controller-->
+        <scene sceneID="xlA-zN-fAG">
+            <objects>
+                <viewController storyboardIdentifier="AppStoreViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="1nz-7T-D76" customClass="AppStoreViewController" customModule="Learning_iOS" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="LV9-av-DJI">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="w6w-xY-0f2">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="RuJ-wC-kwW">
+                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells/>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="w6w-xY-0f2" firstAttribute="leading" secondItem="CYa-H9-eux" secondAttribute="leading" id="7fS-5T-EVC"/>
+                            <constraint firstItem="CYa-H9-eux" firstAttribute="bottom" secondItem="w6w-xY-0f2" secondAttribute="bottom" id="Ig5-gy-L6F"/>
+                            <constraint firstItem="CYa-H9-eux" firstAttribute="trailing" secondItem="w6w-xY-0f2" secondAttribute="trailing" id="XMK-8G-HwY"/>
+                            <constraint firstItem="w6w-xY-0f2" firstAttribute="top" secondItem="CYa-H9-eux" secondAttribute="top" id="bw0-h3-3wJ"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="CYa-H9-eux"/>
+                    </view>
+                    <connections>
+                        <outlet property="appStoreCollectionView" destination="w6w-xY-0f2" id="vkJ-B0-7Eg"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6An-Sf-qi5" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1034" y="119"/>
         </scene>
     </scenes>
     <resources>
