--- a/Learning-iOS/Base.lproj/Main.storyboard
+++ b/Learning-iOS/Base.lproj/Main.storyboard
@@ -123,11 +123,19 @@
                                     <action selector="didTapUITrace:" destination="BYZ-38-t0r" eventType="touchDown" id="eiT-eH-Ydo"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nzb-C8-ccS">
+                                <rect key="frame" x="20" y="602" width="148" height="30"/>
+                                <state key="normal" title="PagingViewController"/>
+                                <connections>
+                                    <segue destination="of8-gE-Szk" kind="show" id="YVE-aI-9bp"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstItem="xt5-7m-9hV" firstAttribute="top" secondItem="xyN-55-INs" secondAttribute="bottom" constant="8" id="077-nF-iNl"/>
                             <constraint firstItem="xt5-7m-9hV" firstAttribute="leading" secondItem="xyN-55-INs" secondAttribute="leading" id="0ZL-Pf-bZp"/>
+                            <constraint firstItem="nzb-C8-ccS" firstAttribute="leading" secondItem="FgV-nL-DMz" secondAttribute="leading" id="1g9-h0-Fti"/>
                             <constraint firstItem="FgV-nL-DMz" firstAttribute="leading" secondItem="dki-rm-6Ll" secondAttribute="leading" id="1lU-gq-Bdb"/>
                             <constraint firstItem="xyN-55-INs" firstAttribute="top" secondItem="hGo-Dk-eAY" secondAttribute="bottom" constant="8" id="3Kc-zm-Ir4"/>
                             <constraint firstItem="tzD-2c-tXT" firstAttribute="leading" secondItem="mB0-4R-kMv" secondAttribute="leading" id="4A4-EZ-4YG"/>
@@ -151,6 +159,7 @@
                             <constraint firstItem="tzD-2c-tXT" firstAttribute="top" secondItem="mB0-4R-kMv" secondAttribute="bottom" constant="8" id="o2P-mA-faw"/>
                             <constraint firstItem="hGo-Dk-eAY" firstAttribute="top" secondItem="kmb-TD-VXo" secondAttribute="bottom" constant="8" id="oQL-9K-bzJ"/>
                             <constraint firstItem="MF2-Du-W9E" firstAttribute="leading" secondItem="tzD-2c-tXT" secondAttribute="leading" id="vsh-Xp-8H8"/>
+                            <constraint firstItem="nzb-C8-ccS" firstAttribute="top" secondItem="FgV-nL-DMz" secondAttribute="bottom" constant="8" id="wLG-kh-v7s"/>
                             <constraint firstItem="kmb-TD-VXo" firstAttribute="leading" secondItem="MF2-Du-W9E" secondAttribute="leading" id="wNb-9z-D6M"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -736,6 +745,37 @@ Label</string>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GF4-dB-rhu" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="905.79710144927549" y="-556.47321428571422"/>
+        </scene>
+        <!--Example Page View Controller-->
+        <scene sceneID="g65-S6-g06">
+            <objects>
+                <viewController id="of8-gE-Szk" customClass="ExamplePageViewController" customModule="Learning_iOS" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="SZg-TM-qZx">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tUm-wM-Dvq">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="tUm-wM-Dvq" firstAttribute="leading" secondItem="yE5-8G-6Ze" secondAttribute="leading" id="Dcp-9L-RGk"/>
+                            <constraint firstItem="yE5-8G-6Ze" firstAttribute="bottom" secondItem="tUm-wM-Dvq" secondAttribute="bottom" id="mnk-Wq-uSO"/>
+                            <constraint firstItem="tUm-wM-Dvq" firstAttribute="top" secondItem="yE5-8G-6Ze" secondAttribute="top" id="oaJ-72-VH3"/>
+                            <constraint firstItem="yE5-8G-6Ze" firstAttribute="trailing" secondItem="tUm-wM-Dvq" secondAttribute="trailing" id="qNX-Gz-g8z"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="yE5-8G-6Ze"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="zHd-2u-KbL"/>
+                    <connections>
+                        <outlet property="containerView" destination="tUm-wM-Dvq" id="CPf-fM-O6Z"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="HSl-US-F4F" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1867" y="-576"/>
         </scene>
         <!--Github Client View Controller-->
         <scene sceneID="p3Z-Hw-n9f">
